// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ItemDetailModal UI Updates > falls back to CSV parsing when JSON is malformed 1`] = `
<DocumentFragment>
  <div
    class="d_flex ai_center jc_center pos_fixed top_0 left_0 w_screen h_screen bg-c_rgba(0,_0,_0,_0.5) z_1000 p_0 md:p_4"
  >
    <div
      aria-label="Item details"
      aria-modal="true"
      class="bg-c_white bdr_none md:bdr_lg bx-sh_xl ov_hidden pos_relative ta_left ring_none d_flex flex-d_column w_full md:w_90vw h_full md:h_90vh max-w_full md:max-w_none max-h_full md:max-h_90vh"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="d_flex flex-d_column gap_4 p_0 ov-y_auto flex_1 min-h_0"
      >
        <div
          class="d_flex ai_center jc_space-between p_2 bd-b_1px_solid bd-c_gray.100"
        >
          <h2
            class="fs_md fw_bold trunc_true flex_1"
          >
            <a
              class="c_inherit td_none hover:td_underline hover:c_blue.600"
              href=""
              rel="noopener noreferrer"
              target="_blank"
            >
              Item 3
            </a>
          </h2>
          <button
            class="bdr_md fw_medium cursor_pointer bd_1px_solid bd-c_transparent trs_all_0.2s d_inline-flex ai_center jc_center gap_2 disabled:op_0.5 disabled:cursor_not-allowed fs_sm py_2 px_4 bg_transparent c_blue.600 hover:bg_blue.50 hover:c_blue.700"
            type="button"
            variant="ghost"
          >
            Close
          </button>
        </div>
        <div
          class="pos_absolute bottom_6 md:bottom_8 right_6 md:right_8 z_10"
        >
          <button
            aria-label="Mark as Read"
            aria-pressed="false"
            class="w_14 h_14 bdr_full bg_blue.600 c_white d_flex ai_center jc_center bx-sh_lg cursor_pointer bd_1px_solid bd-c_transparent trs_all_0.2s hover:trf_scale(1.05) hover:bg_blue.700 active:trf_scale(0.95)"
            title="Mark as Read"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6L9 17l-5-5"
              />
            </svg>
          </button>
        </div>
        <div
          class="pos_absolute w_1px h_1px p_0 m_-1px ov_hidden clip_rect(0,_0,_0,_0) white-space_nowrap bd-w_0"
          id="swipe-instruction"
        >
          Swipe navigation not available.
        </div>
        <div
          aria-describedby="swipe-instruction"
          class="d_flex flex-d_column gap_4 p_6 pt_0 pb_24 ov-y_auto h_full"
          data-testid="swipe-container"
          style="transform: translateX(0px); transition: transform 0.2s ease-out;"
        >
          <div
            class="d_flex ai_center flex-wrap_wrap gap_4 fs_sm c_gray.500"
          >
            <span
              class="d_flex ai_center gap_1"
              title="Received Date"
            >
              <span
                class="d_none xs:d_inline"
              >
                Received:
              </span>
              <span
                class="d_inline xs:d_none"
                title="Received"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <polyline
                    points="12 6 12 12 16 14"
                  />
                </svg>
                <span
                  class="pos_absolute w_1px h_1px p_0 m_-1px ov_hidden clip_rect(0,_0,_0,_0) white-space_nowrap bd-w_0"
                >
                  Received:
                </span>
              </span>
            </span>
            <div
              class="d_flex flex-wrap_wrap gap_1"
            >
              <span
                class="px_2 py_0.5 bg_gray.100 bdr_full fs_10px c_gray.600 bd_1px_solid bd-c_gray.200"
              >
                Malformed
              </span>
              <span
                class="px_2 py_0.5 bg_gray.100 bdr_full fs_10px c_gray.600 bd_1px_solid bd-c_gray.200"
              >
                JSON
              </span>
            </div>
          </div>
          <div
            class="lh_relaxed [&_a]:c_blue.600 [&_a]:td_underline [&_a]:[&:has(img)]:d_inline-block [&_a]:[&:has(img)]:max-w_full [&_a]:[&:has(img)]:va_bottom [&_p]:mb_4 [&_p:has(img_+_img),_&_p:has(a_+_a),_&_p:has(img_+_a),_&_p:has(a_+_img)]:d_flex [&_p:has(img_+_img),_&_p:has(a_+_a),_&_p:has(img_+_a),_&_p:has(a_+_img)]:flex-wrap_wrap [&_p:has(img_+_img),_&_p:has(a_+_a),_&_p:has(img_+_a),_&_p:has(a_+_img)]:gap_2 [&_p:has(img_+_img),_&_p:has(a_+_a),_&_p:has(img_+_a),_&_p:has(a_+_img)]:ai_center [&_img]:max-w_full [&_img]:h_auto [&_img]:my_4 [&_img]:op_0 [&_img]:trs_opacity_0.2s [&_img]:max-h_10vh [&_img]:[&[data-layout]]:op_1 [&_img]:[&[data-layout='hero']]:max-h_30vh [&_img]:[&[data-layout='icon']]:max-h_5vh [&_img]:[&[data-layout='other']]:max-h_10vh [&_pre]:ov-x_auto [&_pre]:max-w_full [&_pre]:bg-c_gray.50 [&_pre]:p_4 [&_pre]:bdr_md [&_pre]:bd_1px_solid [&_pre]:bd-c_gray.200 [&_pre]:my_4 [&_code]:ff_mono [&_code]:fs_0.9em [&_code]:bg-c_gray.100 [&_code]:p_0.2em_0.4em [&_code]:bdr_sm [&_pre_code]:bg-c_transparent [&_pre_code]:p_0 [&_pre_code]:bdr_0 [&_pre_code]:fs_sm [&_a:is([href*="#gh-light-mode-only"],_[href*="%23gh-light-mode-only"])_img]:d_inline-block [&_a:is([href*="#gh-dark-mode-only"],_[href*="%23gh-dark-mode-only"])_img]:d_none [@media_(prefers-color-scheme:_dark)]:[&_a:is([href*="#gh-light-mode-only"],_[href*="%23gh-light-mode-only"])_img]:d_none! [@media_(prefers-color-scheme:_dark)]:[&_a:is([href*="#gh-dark-mode-only"],_[href*="%23gh-dark-mode-only"])_img]:d_inline-block! [@media_(prefers-color-scheme:_light)]:[&_a:is([href*="#gh-light-mode-only"],_[href*="%23gh-light-mode-only"])_img]:d_inline-block! [@media_(prefers-color-scheme:_light)]:[&_a:is([href*="#gh-dark-mode-only"],_[href*="%23gh-dark-mode-only"])_img]:d_none!"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ItemDetailModal UI Updates > renders comma-separated categories when JSON format is absent 1`] = `
<DocumentFragment>
  <div
    class="d_flex ai_center jc_center pos_fixed top_0 left_0 w_screen h_screen bg-c_rgba(0,_0,_0,_0.5) z_1000 p_0 md:p_4"
  >
    <div
      aria-label="Item details"
      aria-modal="true"
      class="bg-c_white bdr_none md:bdr_lg bx-sh_xl ov_hidden pos_relative ta_left ring_none d_flex flex-d_column w_full md:w_90vw h_full md:h_90vh max-w_full md:max-w_none max-h_full md:max-h_90vh"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="d_flex flex-d_column gap_4 p_0 ov-y_auto flex_1 min-h_0"
      >
        <div
          class="d_flex ai_center jc_space-between p_2 bd-b_1px_solid bd-c_gray.100"
        >
          <h2
            class="fs_md fw_bold trunc_true flex_1"
          >
            <a
              class="c_inherit td_none hover:td_underline hover:c_blue.600"
              href=""
              rel="noopener noreferrer"
              target="_blank"
            >
              Item 2
            </a>
          </h2>
          <button
            class="bdr_md fw_medium cursor_pointer bd_1px_solid bd-c_transparent trs_all_0.2s d_inline-flex ai_center jc_center gap_2 disabled:op_0.5 disabled:cursor_not-allowed fs_sm py_2 px_4 bg_transparent c_blue.600 hover:bg_blue.50 hover:c_blue.700"
            type="button"
            variant="ghost"
          >
            Close
          </button>
        </div>
        <div
          class="pos_absolute bottom_6 md:bottom_8 right_6 md:right_8 z_10"
        >
          <button
            aria-label="Mark as Read"
            aria-pressed="false"
            class="w_14 h_14 bdr_full bg_blue.600 c_white d_flex ai_center jc_center bx-sh_lg cursor_pointer bd_1px_solid bd-c_transparent trs_all_0.2s hover:trf_scale(1.05) hover:bg_blue.700 active:trf_scale(0.95)"
            title="Mark as Read"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6L9 17l-5-5"
              />
            </svg>
          </button>
        </div>
        <div
          class="pos_absolute w_1px h_1px p_0 m_-1px ov_hidden clip_rect(0,_0,_0,_0) white-space_nowrap bd-w_0"
          id="swipe-instruction"
        >
          Swipe navigation not available.
        </div>
        <div
          aria-describedby="swipe-instruction"
          class="d_flex flex-d_column gap_4 p_6 pt_0 pb_24 ov-y_auto h_full"
          data-testid="swipe-container"
          style="transform: translateX(0px); transition: transform 0.2s ease-out;"
        >
          <div
            class="d_flex ai_center flex-wrap_wrap gap_4 fs_sm c_gray.500"
          >
            <span
              class="d_flex ai_center gap_1"
              title="Received Date"
            >
              <span
                class="d_none xs:d_inline"
              >
                Received:
              </span>
              <span
                class="d_inline xs:d_none"
                title="Received"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <polyline
                    points="12 6 12 12 16 14"
                  />
                </svg>
                <span
                  class="pos_absolute w_1px h_1px p_0 m_-1px ov_hidden clip_rect(0,_0,_0,_0) white-space_nowrap bd-w_0"
                >
                  Received:
                </span>
              </span>
            </span>
            <div
              class="d_flex flex-wrap_wrap gap_1"
            >
              <span
                class="px_2 py_0.5 bg_gray.100 bdr_full fs_10px c_gray.600 bd_1px_solid bd-c_gray.200"
              >
                Science
              </span>
              <span
                class="px_2 py_0.5 bg_gray.100 bdr_full fs_10px c_gray.600 bd_1px_solid bd-c_gray.200"
              >
                Space
              </span>
            </div>
          </div>
          <div
            class="lh_relaxed [&_a]:c_blue.600 [&_a]:td_underline [&_a]:[&:has(img)]:d_inline-block [&_a]:[&:has(img)]:max-w_full [&_a]:[&:has(img)]:va_bottom [&_p]:mb_4 [&_p:has(img_+_img),_&_p:has(a_+_a),_&_p:has(img_+_a),_&_p:has(a_+_img)]:d_flex [&_p:has(img_+_img),_&_p:has(a_+_a),_&_p:has(img_+_a),_&_p:has(a_+_img)]:flex-wrap_wrap [&_p:has(img_+_img),_&_p:has(a_+_a),_&_p:has(img_+_a),_&_p:has(a_+_img)]:gap_2 [&_p:has(img_+_img),_&_p:has(a_+_a),_&_p:has(img_+_a),_&_p:has(a_+_img)]:ai_center [&_img]:max-w_full [&_img]:h_auto [&_img]:my_4 [&_img]:op_0 [&_img]:trs_opacity_0.2s [&_img]:max-h_10vh [&_img]:[&[data-layout]]:op_1 [&_img]:[&[data-layout='hero']]:max-h_30vh [&_img]:[&[data-layout='icon']]:max-h_5vh [&_img]:[&[data-layout='other']]:max-h_10vh [&_pre]:ov-x_auto [&_pre]:max-w_full [&_pre]:bg-c_gray.50 [&_pre]:p_4 [&_pre]:bdr_md [&_pre]:bd_1px_solid [&_pre]:bd-c_gray.200 [&_pre]:my_4 [&_code]:ff_mono [&_code]:fs_0.9em [&_code]:bg-c_gray.100 [&_code]:p_0.2em_0.4em [&_code]:bdr_sm [&_pre_code]:bg-c_transparent [&_pre_code]:p_0 [&_pre_code]:bdr_0 [&_pre_code]:fs_sm [&_a:is([href*="#gh-light-mode-only"],_[href*="%23gh-light-mode-only"])_img]:d_inline-block [&_a:is([href*="#gh-dark-mode-only"],_[href*="%23gh-dark-mode-only"])_img]:d_none [@media_(prefers-color-scheme:_dark)]:[&_a:is([href*="#gh-light-mode-only"],_[href*="%23gh-light-mode-only"])_img]:d_none! [@media_(prefers-color-scheme:_dark)]:[&_a:is([href*="#gh-dark-mode-only"],_[href*="%23gh-dark-mode-only"])_img]:d_inline-block! [@media_(prefers-color-scheme:_light)]:[&_a:is([href*="#gh-light-mode-only"],_[href*="%23gh-light-mode-only"])_img]:d_inline-block! [@media_(prefers-color-scheme:_light)]:[&_a:is([href*="#gh-dark-mode-only"],_[href*="%23gh-dark-mode-only"])_img]:d_none!"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ItemDetailModal UI Updates > renders title as a link and displays content, image, and categories 1`] = `
<DocumentFragment>
  <div
    class="d_flex ai_center jc_center pos_fixed top_0 left_0 w_screen h_screen bg-c_rgba(0,_0,_0,_0.5) z_1000 p_0 md:p_4"
  >
    <div
      aria-label="Item details"
      aria-modal="true"
      class="bg-c_white bdr_none md:bdr_lg bx-sh_xl ov_hidden pos_relative ta_left ring_none d_flex flex-d_column w_full md:w_90vw h_full md:h_90vh max-w_full md:max-w_none max-h_full md:max-h_90vh"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="d_flex flex-d_column gap_4 p_0 ov-y_auto flex_1 min-h_0"
      >
        <div
          class="d_flex ai_center jc_space-between p_2 bd-b_1px_solid bd-c_gray.100"
        >
          <h2
            class="fs_md fw_bold trunc_true flex_1"
          >
            <a
              class="c_inherit td_none hover:td_underline hover:c_blue.600"
              href="https://example.com/item1"
              rel="noopener noreferrer"
              target="_blank"
            >
              Link Title
            </a>
          </h2>
          <button
            class="bdr_md fw_medium cursor_pointer bd_1px_solid bd-c_transparent trs_all_0.2s d_inline-flex ai_center jc_center gap_2 disabled:op_0.5 disabled:cursor_not-allowed fs_sm py_2 px_4 bg_transparent c_blue.600 hover:bg_blue.50 hover:c_blue.700"
            type="button"
            variant="ghost"
          >
            Close
          </button>
        </div>
        <div
          class="pos_absolute bottom_6 md:bottom_8 right_6 md:right_8 z_10"
        >
          <button
            aria-label="Mark as Read"
            aria-pressed="false"
            class="w_14 h_14 bdr_full bg_blue.600 c_white d_flex ai_center jc_center bx-sh_lg cursor_pointer bd_1px_solid bd-c_transparent trs_all_0.2s hover:trf_scale(1.05) hover:bg_blue.700 active:trf_scale(0.95)"
            title="Mark as Read"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6L9 17l-5-5"
              />
            </svg>
          </button>
        </div>
        <div
          class="pos_absolute w_1px h_1px p_0 m_-1px ov_hidden clip_rect(0,_0,_0,_0) white-space_nowrap bd-w_0"
          id="swipe-instruction"
        >
          Swipe navigation not available.
        </div>
        <div
          aria-describedby="swipe-instruction"
          class="d_flex flex-d_column gap_4 p_6 pt_0 pb_24 ov-y_auto h_full"
          data-testid="swipe-container"
          style="transform: translateX(0px); transition: transform 0.2s ease-out;"
        >
          <div
            class="d_flex ai_center flex-wrap_wrap gap_4 fs_sm c_gray.500"
          >
            <span
              class="d_flex ai_center gap_1"
              title="Source Domain"
            >
              <svg
                aria-hidden="true"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
                />
                <polyline
                  points="15 3 21 3 21 9"
                />
                <line
                  x1="10"
                  x2="21"
                  y1="14"
                  y2="3"
                />
              </svg>
              <span
                class="fs_xs c_gray.500"
              >
                example.com
              </span>
            </span>
            <span
              class="d_flex ai_center gap_1"
              title="Received Date"
            >
              <span
                class="d_none xs:d_inline"
              >
                Received:
              </span>
              <span
                class="d_inline xs:d_none"
                title="Received"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <polyline
                    points="12 6 12 12 16 14"
                  />
                </svg>
                <span
                  class="pos_absolute w_1px h_1px p_0 m_-1px ov_hidden clip_rect(0,_0,_0,_0) white-space_nowrap bd-w_0"
                >
                  Received:
                </span>
              </span>
            </span>
            <div
              class="d_flex flex-wrap_wrap gap_1"
            >
              <span
                class="px_2 py_0.5 bg_gray.100 bdr_full fs_10px c_gray.600 bd_1px_solid bd-c_gray.200"
              >
                Tech
              </span>
              <span
                class="px_2 py_0.5 bg_gray.100 bdr_full fs_10px c_gray.600 bd_1px_solid bd-c_gray.200"
              >
                News
              </span>
            </div>
          </div>
          <div
            class="my_4"
          >
            <img
              alt=""
              class="max-w_full h_auto bdr_md bx-sh_sm op_0 trs_opacity_0.2s max-h_10vh [&[data-layout]]:op_1 [&[data-layout='hero']]:max-h_30vh [&[data-layout='icon']]:max-h_5vh [&[data-layout='other']]:max-h_10vh"
              src="https://example.com/image.jpg"
            />
          </div>
          <div
            class="lh_relaxed [&_a]:c_blue.600 [&_a]:td_underline [&_a]:[&:has(img)]:d_inline-block [&_a]:[&:has(img)]:max-w_full [&_a]:[&:has(img)]:va_bottom [&_p]:mb_4 [&_p:has(img_+_img),_&_p:has(a_+_a),_&_p:has(img_+_a),_&_p:has(a_+_img)]:d_flex [&_p:has(img_+_img),_&_p:has(a_+_a),_&_p:has(img_+_a),_&_p:has(a_+_img)]:flex-wrap_wrap [&_p:has(img_+_img),_&_p:has(a_+_a),_&_p:has(img_+_a),_&_p:has(a_+_img)]:gap_2 [&_p:has(img_+_img),_&_p:has(a_+_a),_&_p:has(img_+_a),_&_p:has(a_+_img)]:ai_center [&_img]:max-w_full [&_img]:h_auto [&_img]:my_4 [&_img]:op_0 [&_img]:trs_opacity_0.2s [&_img]:max-h_10vh [&_img]:[&[data-layout]]:op_1 [&_img]:[&[data-layout='hero']]:max-h_30vh [&_img]:[&[data-layout='icon']]:max-h_5vh [&_img]:[&[data-layout='other']]:max-h_10vh [&_pre]:ov-x_auto [&_pre]:max-w_full [&_pre]:bg-c_gray.50 [&_pre]:p_4 [&_pre]:bdr_md [&_pre]:bd_1px_solid [&_pre]:bd-c_gray.200 [&_pre]:my_4 [&_code]:ff_mono [&_code]:fs_0.9em [&_code]:bg-c_gray.100 [&_code]:p_0.2em_0.4em [&_code]:bdr_sm [&_pre_code]:bg-c_transparent [&_pre_code]:p_0 [&_pre_code]:bdr_0 [&_pre_code]:fs_sm [&_a:is([href*="#gh-light-mode-only"],_[href*="%23gh-light-mode-only"])_img]:d_inline-block [&_a:is([href*="#gh-dark-mode-only"],_[href*="%23gh-dark-mode-only"])_img]:d_none [@media_(prefers-color-scheme:_dark)]:[&_a:is([href*="#gh-light-mode-only"],_[href*="%23gh-light-mode-only"])_img]:d_none! [@media_(prefers-color-scheme:_dark)]:[&_a:is([href*="#gh-dark-mode-only"],_[href*="%23gh-dark-mode-only"])_img]:d_inline-block! [@media_(prefers-color-scheme:_light)]:[&_a:is([href*="#gh-light-mode-only"],_[href*="%23gh-light-mode-only"])_img]:d_inline-block! [@media_(prefers-color-scheme:_light)]:[&_a:is([href*="#gh-dark-mode-only"],_[href*="%23gh-dark-mode-only"])_img]:d_none!"
          >
            <div>
              <p>
                Content
              </p>
              

            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
